--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pillow = "^11.0.0"
 requests = "^2.32.3"
 django-allauth = "^65.2.0"
 dj-rest-auth = "^7.0.0"
+werkzeug = "^3.1.3"
 
 
 [build-system]
